erDiagram
    CUSTOMERS {
        int customer_id PK
        string company_name
        string phone
        string email
        boolean credit_hold
    }

    FIELDS {
        int field_id PK
        int customer_id FK
        string field_name
        string location
        float area
    }

    EQUIPMENT {
        int equipment_id PK
        string serial_number
        string equipment_type
        string status
        string current_location
    }

    TECHNICIANS {
        int technician_id PK
        string full_name
        string role
        boolean authenticated
    }

    CHEMICALS {
        int chemical_id PK
        string name
        string hazard_class
        boolean requires_signoff
    }

    DISPATCH_JOBS {
        int dispatch_id PK
        int equipment_id FK
        int field_id FK
        int technician_id FK
        string job_type
        int chemical_id FK
        string status
        string approval_status
        int approved_by FK
        datetime requested_at
        datetime started_at
        datetime completed_at
    }

    INCIDENT_NOTES {
        int incident_id PK
        int equipment_id FK
        int technician_id FK
        text raw_note
        text summarized_note
        string severity
        boolean resolved
        datetime created_at
    }

    FLEET_REPORTS {
        int report_id PK
        string month
        string status
        int progress
        int generated_by FK
        datetime created_at
    }

    CUSTOMERS ||--o{ FIELDS : "owns (1:N)"
    FIELDS ||--o{ DISPATCH_JOBS : "assigned_to (1:N)"
    EQUIPMENT ||--o{ DISPATCH_JOBS : "performs (1:N)"
    TECHNICIANS ||--o{ DISPATCH_JOBS : "dispatches (1:N)"
    CHEMICALS ||--o{ DISPATCH_JOBS : "used_in (0..1:N)"
    TECHNICIANS ||--o{ DISPATCH_JOBS : "approves (0..1:N)"
    EQUIPMENT ||--o{ INCIDENT_NOTES : "has (1:N)"
    TECHNICIANS ||--o{ INCIDENT_NOTES : "writes (1:N)"
    TECHNICIANS ||--o{ FLEET_REPORTS : "generates (1:N)"
